<resources>
    <string name="app_name">YouKonwIt</string>
    <string name="sishang_name">Sityle丝尚</string>
    <string name="siya_name">丝雅写真</string>
    <string name="youguo_name">尤果网</string>
    <string name="ru_name">Ru1mm</string>
    <string name="heisi_name">黑丝</string>
    <string name="rq_name">RQ_STAR</string>
    <string name="dgc_name">DGC套图</string>
    <string name="rosi_name">Rosi</string>
    <string name="pans_name">PANS写真</string>
    <string name="disi_name">第四印象</string>
    <string name="xiuren_name">秀人</string>
    <string name="tuinv_name">推女郎</string>
    <string name="simei_name">丝魅写真</string>
    <string name="meiyuan_name">美媛馆</string>
    <string name="aa_name">AAGirl写真</string>
    <string name="donggan_name">动感小站</string>
    <string name="only_name">OnlyTease</string>


</resources>

